--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,8 @@
 {
   "compilerOptions": {
-    // Options
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es2022",
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "moduleDetection": "force",
-    "isolatedModules": true,
-    // "verbatimModuleSyntax": true,
-    "removeComments": true,
-
-    // Strict Mode
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
-
-    "module": "NodeNext",
-    "outDir": "dist",
-    "sourceMap": true,
-
-    // DOM Module
-    "lib": ["es2022", "dom", "dom.iterable"]
-  }
+    "outFile": "dist/out.js",
+    "module": "none",
+    "skipLibCheck": true
+  },
+  "include": ["**/*.ts"]
 }
